# eraxc

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  TODO.md  main.cpp
docs/: keywords.md  macros.md  operators.md  steps.md  syntax.md
docs/stl/: containers.md
examples/: 0.erx  1.blck  1.erx  2.blck  2.erx  cycle.erx  if_test.erx  long-long.blck  main.erx  test.erx
src/: CMakeLists.txt  blck_compiler.cpp  blck_compiler.h  main.cpp
src/backend/: IL_handler.cpp  IL_handler.h  JIR_handler.cpp  JIR_handler.h  Scope.h  asm_translator.cpp  asm_translator.h  scope.h
src/backend/JIR/: Node.h  Operand.h  Operation.h  ScopeManager.cpp  ScopeManager.h  utils.h
src/backend/JIR/CFG/: CFG.cpp  CFG.h  CFG_parts.h  errors.h
src/backend/asm_translators/: asm_translator.h  asm_x86.h  asm_x86_mem.h
src/backend/codegen/: asm_translator.h  asm_x86.h  asm_x86_mem.h
src/bundled/: types.erax
src/frontend/lexic/: lexic.h  prepocessor.cpp  preprocessor.h  preprocessor_tokenizer.cpp  preprocessor_tokenizer.h
src/frontend/syntax/: AST.h  enums.cpp  enums.h  syntax_analyzer.cpp  syntax_analyzer.h
src/legacy/: AST.h  lexic.cpp  lexic.h  prepocessor.cpp  syntax_analyzer.cpp  syntax_analyzer.h
src/lexic/: lexic.cpp  lexic.h  prepocessor.cpp  preprocessor.h
src/syntax/: syntax_analyzer.cpp  syntax_analyzer.h
src/util/: ArrayTree.cpp  ArrayTree.h  IL_utils.h  JIR_utils.h  common.h  error.cpp  error.h
tests/: CMakeLists.txt  alfnsjk.txt  test_ArrayTree.h  test_all.h  test_lexer.h  test_preprocessor.h  test_syntax_analyzer.h
tests/JIR/: test_jir.h
tests/JIR/files/: main_alloc_ret.erx  postfix.erx  precedence.erx  prefix.erx  rvalue_unary.erx
tests/files/: preprocessor_define.erx  preprocessor_include.erx  tokenizer.erx
tests/preprocessor/: PreprocessorTests.cpp  tokenizerTests.cpp
tests/preprocessor/files/: preprocessor_cycle_include.erx  preprocessor_define.erx  preprocessor_include.erx  tokenizer.erx
